automne/admin/css/xtheme-automne.css
/* ... */
.x-btn-text-icon .x-btn-mc .atm-pic-disable{
	background-image:				url(/automne/admin/img/pictos/pictos.png);
	background-position:			0px -530px;
}
/* pictos actions dans le menu action */
.x-menu-item .atm-pic-copy{
	background-image:				url(/automne/admin/img/pictos/pictos.png);
	background-position:			0px -172px;
}
.x-menu-item .atm-pic-unlock{
	background-image:				url(/automne/admin/img/pictos/pictos.png);
	background-position:			0px -364px;
}
.x-menu-item .atm-pic-undelete{
	background-image:				url(/automne/admin/img/pictos/pictos.png);
	background-position:			0px -268px;
}
.x-menu-item .atm-pic-unarchive{
	background-image:				url(/automne/admin/img/pictos/pictos.png);
	background-position:			0px -220px;
}
.x-menu-item .atm-pic-move{
	background-image:				url(/automne/admin/img/pictos/pictos.png);
	background-position:			0px -148px;
}
.x-menu-item .atm-pic-archiving{
	background-image:				url(/automne/admin/img/pictos/pictos.png);
	background-position:			0px -196px;
}
.x-menu-item .atm-pic-deletion{
	background-image:				url(/automne/admin/img/pictos/pictos.png);
	background-position:			0px -244px;
}
.x-menu-item .atm-pic-editions-cancelling{
	background-image:				url(/automne/admin/img/pictos/pictos.png);
	background-position:			0px -292px;
}
.x-menu-item .atm-pic-draft-deletion{
	background-image:				url(/automne/admin/img/pictos/pictos.png);
	background-position:			0px -676px; 
}
.x-menu-item .atm-pic-draft-validation{
	background-image:				url(/automne/admin/img/pictos/pictos.png);
	background-position:			0px -318px;
}
.x-menu-item .atm-pic-validate{
	background-image:				url(/automne/admin/img/pictos/pictos.png);
	background-position:			0px -388px;
}
.x-menu-item .atm-pic-scripts{
	background-image:				url(/automne/admin/img/pictos/pictos.png);
	background-position:			0px -964px;
}
.x-menu-item .x-btn-mc .atm-pic-cancel,
.atm-server .atm-pic-cancel{
	background-image:				url(/automne/admin/img/pictos/pictos.png);
	background-position:			0px -124px;
}
.x-menu-item .x-btn-mc .atm-pic-ok,
.atm-server .atm-pic-ok{
	background-image:				url(/automne/admin/img/pictos/pictos.png);
	background-position:			0px -100px;
}
.x-menu-item .x-btn-mc .atm-pic-question,
.atm-server .atm-pic-question{
	background-image:				url(/automne/admin/img/pictos/pictos.png);
	background-position:			0px -77px;
}
.atm-server .atm-pic-logo {
	background:			url(/automne/admin/img/pictos/logo.gif) no-repeat 0px 2px !important;
}
.x-menu-item .x-btn-mc .atm-pic-create{
	background-image:				url(/automne/admin/img/pictos/pictos.png);
	background-position:			0px -412px;
}
.x-menu-item .x-btn-mc .atm-pic-modify{
	background-image:				url(/automne/admin/img/pictos/pictos.png);
	background-position:			0px -556px;
}
.x-menu-item .x-btn-mc .atm-pic-enable{
	background-image:				url(/automne/admin/img/pictos/pictos.png);
	background-position:			0px -508px;
}
.x-menu-item .x-btn-mc .atm-pic-disable{
	background-image:				url(/automne/admin/img/pictos/pictos.png);
	background-position:			0px -532px;
}
/* fieldset */
.x-fieldset-header-text{
	color:							#6AA408;
}

/* chooser */
#atm-chooser-view .x-view-selected{
	background-color:				#f8ffec !important;
	border-color:					#a0c85a !important;
}
#atm-chooser-view .x-view-selected span{
	color:							#4b7800 !important;
}

/* progress bar*/
.x-progress-wrap{
	border:							1px solid #78B70F;
}
.x-progress-inner{
	background-color:				#edf7dd;
	background-image:				none;
}
.x-progress-bar{
    background:						#b8e273 url(/automne/admin/img/progress/progress-bg.gif) repeat-x left center;
    border-top:						1px solid #78b70f;
    border-bottom:					1px solid #78b70f;
    border-right:					1px solid #78b70f;
}
.x-progress-text-back{
	color:							#78b70f;
}

/* date */
.x-date-middle{
	background:						url(/automne/admin/img/shared/hd-sprite.gif) repeat-x 0 -86px;
}
.x-date-left{
	background:						url(/automne/admin/img/shared/hd-sprite.gif) no-repeat left -43px;
}
.x-date-right {
	background:						url(/automne/admin/img/shared/hd-sprite.gif) no-repeat right 0px;
}
.x-date-right a {
    background-image:				url(/automne/admin/img/shared/right-btn.gif);
}
.x-date-left a{
	background-image:				url(/automne/admin/img/shared/left-btn.gif);
}
.x-date-inner th {
    background:						#d6efac url(/automne/admin/img/shared/glass-bg.gif) repeat-x left top;
	border-color:					#b2da6b;
	color:							#629902;
	font-size:						11px;
}
.x-date-inner .x-date-selected a{
    background:						#d6efac url(/automne/admin/img/shared/glass-bg.gif) repeat-x left top;
}
.x-date-bottom {
    border-top:						1px solid #b2da6b;
    background:						#d6efac url(/automne/admin/img/shared/glass-bg.gif) repeat-x left top;
}
.x-date-mp-btns {
    background:						#d6efac url(/automne/admin/img/shared/glass-bg.gif) repeat-x left top;
}
td.x-date-mp-sel a {
    background:						#d6efac url(/automne/admin/img/shared/glass-bg.gif) repeat-x left top;
	border:							1px solid #6aa503;
}
.x-date-inner .x-date-today a{
	border-color:					#6aa503;
}
.x-date-inner .x-date-selected a {
	border-color:					#6aa503;
}
.x-date-inner a:hover, .x-date-inner .x-date-disabled a:hover{
    background: 					#e9f7d2;
}
td.x-date-mp-month a,td.x-date-mp-year a {
	color:							#626262;
}
td.x-date-mp-month a:hover,td.x-date-mp-year a:hover {
	color:							#626262;
	background:						#e9f7d2;
}
.x-date-mp-ybtn a {
    background:						url(/automne/admin/img/panel/tool-sprites.gif) no-repeat;
}
.x-date-mp-btns button{
	background-color:				#e3e5e6;
	border-color:					#6e7a80;
	color:							black;
}
/* select */
.ux-mselect .ux-mselect-selected {
	background:						#EEFAE0 none repeat scroll 0 0;
	border:							1px dotted #6AA503 !important;
}
.x-list-selected {
	background-color:				#EEFAE0;
}

